--- a/home.html
+++ b/home.html
@@ -1,17 +1,39 @@
 <!DOCTYPE html>
 <html lang="ua">
 <head>
-  <title>ISCU</title>
+  <title>ISC</title>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
   <div id="wrapper">
 		<header id="header">
 			<div class="container">
 				<div class="header-top">
-					
+					<div class="logo-holder">
+						<img src="images/logo.svg" alt="Інститут монокристалів НАН України" class="logo-img">
+					</div>
+					<div class="languages-holder">
+						<a href="#" class="ua-lang active">
+							<img src="images/ua.svg" alt="ua" class="lang-img">
+							<span class="lang-text">Укр</span>
+						</a>
+						<a href="#" class="eng-lang">
+							<img src="images/eng.svg" alt="eng" class="lang-img">
+							<span class="lang-text">Eng</span>
+						</a>
+					</div>
+					<ul class="contact-holder">
+						<li>м.Харків, пр.Науки, 60</li>
+						<li><a href="tel:+380573410449">+38 (057) 341 04 49</a></li>
+						<li><a href="tel:+380573410166">+38 (057) 341 01 66</a></li>
+						<li><a href="tel:+380573409343">+38 (057) 340 93 43</a></li>
+						<li><a href="mailto:imc@isc.kharkov.ua">imc@isc.kharkov.ua</a></li>
+					</ul>
 				</div>
 			</div>
 		</header>
