--- a/home.html
+++ b/home.html
@@ -36,21 +36,21 @@
 						<li><a href="mailto:imc@isc.kharkov.ua" class="underline">imc@isc.kharkov.ua</a></li>
 					</ul>
 					<div class="social-holder">
-						<a href="#" class="social-link"><img src="images/fb-2.png" alt="fb" class="social-icon"></a>
-						<a href="#"><img src="images/youtube-2.png" alt="youtube" class="social-icon youtube-icon"></a>
+						<a href="#" class="social-link"><img src="images/fb.svg" alt="fb" class="social-icon"></a>
+						<a href="#" class="social-link"><img src="images/youtube.svg" alt="youtube" class="social-icon youtube-icon"></a>
 					</div>
 				</div>
 				<nav class="navbar">
 					<a href="#" class="dropdown"><span class="dropdown-icon"></span></a>
 					<ul uk-dropdown class="navigation">
-						<li class="navigation-item"><a href="#" class="navigation-link underline">ГОЛОВНА</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link underline">ПОДІЇ ТА НОВИНИ</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link underline">СТРУКТУРА</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link underline">НАУКА</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link underline">ДІЯЛЬНІСТЬ</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link underline">АСПІРАНТУРА</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link underline">ПУБЛІКАЦІЇ</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link underline">КОНТАКТИ</a></li>
+						<li class="navigation-item"><a href="#" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="#" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
+						<li class="navigation-item"><a href="#" class="navigation-link">СТРУКТУРА</a></li>
+						<li class="navigation-item"><a href="#" class="navigation-link">НАУКА</a></li>
+						<li class="navigation-item"><a href="#" class="navigation-link">ДІЯЛЬНІСТЬ</a></li>
+						<li class="navigation-item"><a href="#" class="navigation-link">АСПІРАНТУРА</a></li>
+						<li class="navigation-item"><a href="#" class="navigation-link">ПУБЛІКАЦІЇ</a></li>
+						<li class="navigation-item"><a href="#" class="navigation-link">КОНТАКТИ</a></li>
 					</ul>
 				</nav>
 			</div>
@@ -82,12 +82,80 @@
 						сполук А2В6 и їх твердих розчинів, нелінійно-оптичних органічних кристалів, лазерної и оптичної оксидної кераміки 
 						і інших матеріалів у відповідності до профілю своєї діяльності.</p>
 				</section>
+				<section class="section section-technology">
+					<div class="card-technology">
+						<div class="card-content">
+							<span class="underline"></span>
+							<h2 class="card-title">Нелінійно-оптичні кристали</h2>
+							<div class="card-img"><img src="images/card-img-1.png" alt="Нелінійно-оптичні кристали"></div>
+							<p>Розробка та дослідження перспективних нелінійно-
+								оптичних органічних  і неорганічнихмонокристалів 
+								для широкосмугової лазерної генерації і перетворення 
+								терагерцового і ІЧ-випромінювання для застосувань 
+								в фотоніці і оптоелектроніці.</p>
+						</div>
+						<button type="button" uk-toggle="target: #noc" class="btn">Детальнiше</button>
+					</div>
+					<div class="card-technology">
+						<div class="card-content">
+							<span class="underline"></span>
+							<h2 class="card-title">Лазерна кераміка</h2>
+							<div class="card-img"><img src="images/card-img-2.png" alt="Лазерна кераміка"></div>
+							<p>Оптимізація структурно-фазового стану, морфології 
+								та оптичних властивостей оксидних нанопорошків 
+								та прозорої кераміки для оптики та лазерної техніки.</p>
+						</div>
+						<a href="#" class="btn">Детальнiше</a>
+					</div>
+					<div class="card-technology">
+						<div class="card-content">
+							<span class="underline"></span>
+							<h2 class="card-title">Теорія конденсованого стану речовени</h2>
+							<div class="card-img"><img src="images/card-img-3.png" alt="Теорія конденсованого стану речовени"></div>
+							<ul>
+								<li>Нелінійні та квантові властивості структурно-складних 
+									об’єктів;</li>
+								<li>Еволюція дефектних структур та вплив дефектів на властивості наноматеріалів; властивості нанорозмірних 
+									матеріалів;</li>
+								<li>Механізми фрагментації матеріалів, можливості управління 
+									процесами руйнування матеріалів.</li>
+							</ul>
+						</div>
+						<a href="#" class="btn">Детальнiше</a>
+					</div>
+					<div class="card-technology">
+						<div class="card-content">
+							<span class="underline"></span>
+							<h2 class="card-title">Оптичні та лазерні кристали</h2>
+							<div class="card-img"><img src="images/card-img-4.png" alt="Оптичні та лазерні кристали"></div>
+							<p>Розробка та вдосконалення технологій вирощування 
+								в захисних відновних середовищах великогабаритних 
+								монокристалів тугоплавких оксидів; 
+								технологія виготовлення оптичних елементів 
+								для застосування в лазерних та оптико-електронних 
+								системах.</p>
+						</div>
+						<a href="#" class="btn">Детальнiше</a>
+					</div>
+					
+				</section>
 			</div>
 		</main>
 		<span class="bg-img bg-wrapper bg-img-1"><img src="images/bg-img-1.svg" alt="img"></span>
+		
 	</div>
-
-
+	<div id="noc" class="uk-modal noc-modal technology-modal uk-flex-top" uk-modal>
+		<div class="uk-modal-body uk-modal-dialog uk-margin-auto-vertical">
+			<button class="uk-modal-close-outside" type="button" uk-close></button>
+			<h2>ТЕОРІЯ КОНДЕНСОВАНОГО СТАНУ РЕЧОВИНИ</h2>
+			<div class="modal-body" uk-overflow-auto>
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic modi reiciendis incidunt, natus eum facere harum obcaecati fugit provident doloremque ex temporibus magnam at reprehenderit aut laboriosam voluptatem laborum ipsum sint a iure similique? Amet magni dicta excepturi sint cum! Enim eos a esse. Obcaecati dolorum incidunt delectus ad laboriosam omnis quidem voluptatibus eaque fuga sequi maxime, nulla voluptatem minima tenetur optio quisquam ipsam dolore quibusdam aperiam explicabo debitis, provident beatae modi porro! Ducimus repellat eaque aliquid nihil impedit saepe tempora, quae doloremque corporis est fugit voluptate facilis unde totam ad. Aut dolores quaerat natus harum necessitatibus minus ab labore molestiae nemo ad. Officia amet eaque veniam, explicabo qui dolor sit dolorem quae quo voluptatum totam repudiandae nemo natus odio voluptatem est molestiae saepe deleniti asperiores soluta! Eos cupiditate iste numquam, velit laborum rerum cumque officia libero amet molestias dignissimos consequuntur, debitis autem. Nobis, illo est incidunt repellat nihil nemo aliquam autem! Tempore, quo fugit soluta omnis magnam eaque distinctio eum rerum earum iusto? Officiis excepturi nisi qui repudiandae rerum optio aspernatur dignissimos nesciunt et eius exercitationem placeat aut numquam, soluta doloribus, minima mollitia culpa veritatis doloremque necessitatibus perferendis! Autem molestiae dicta ducimus, officiis quas assumenda esse excepturi quo omnis repellendus iure rerum odit, eos, consequuntur dolorem quasi cum incidunt. Perferendis sint ipsum quis architecto perspiciatis adipisci vitae, cupiditate nisi modi, nihil, fugit sunt a pariatur in eligendi! In eum maiores laborum sunt, ad porro, laboriosam doloremque est facere facilis reiciendis illo autem molestiae? Dolore soluta consectetur saepe temporibus odio magni repellat provident, voluptates cumque, quos sit doloremque et! Ipsa expedita blanditiis adipisci et in totam quae quaerat corrupti ut numquam eos accusantium laboriosam, voluptatem minus consequatur dolorem fugit ex aspernatur qui nam. Ex repellat, perspiciatis placeat nobis ratione quidem distinctio, consectetur amet suscipit saepe a nam asperiores blanditiis expedita!
+			</div>
+			<a href="#" class="link-department underline">Відділ теорії конденсованого стану речовини</a>
+		</div>
+	</div>
+	
+		
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/js/uikit.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/js/uikit-icons.min.js"></script>
   <script src="js/main.js"></script>
