--- a/home.html
+++ b/home.html
@@ -149,7 +149,23 @@
 			<button class="uk-modal-close-outside" type="button" uk-close></button>
 			<h2>ТЕОРІЯ КОНДЕНСОВАНОГО СТАНУ РЕЧОВИНИ</h2>
 			<div class="modal-body" uk-overflow-auto>
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic modi reiciendis incidunt, natus eum facere harum obcaecati fugit provident doloremque ex temporibus magnam at reprehenderit aut laboriosam voluptatem laborum ipsum sint a iure similique? Amet magni dicta excepturi sint cum! Enim eos a esse. Obcaecati dolorum incidunt delectus ad laboriosam omnis quidem voluptatibus eaque fuga sequi maxime, nulla voluptatem minima tenetur optio quisquam ipsam dolore quibusdam aperiam explicabo debitis, provident beatae modi porro! Ducimus repellat eaque aliquid nihil impedit saepe tempora, quae doloremque corporis est fugit voluptate facilis unde totam ad. Aut dolores quaerat natus harum necessitatibus minus ab labore molestiae nemo ad. Officia amet eaque veniam, explicabo qui dolor sit dolorem quae quo voluptatum totam repudiandae nemo natus odio voluptatem est molestiae saepe deleniti asperiores soluta! Eos cupiditate iste numquam, velit laborum rerum cumque officia libero amet molestias dignissimos consequuntur, debitis autem. Nobis, illo est incidunt repellat nihil nemo aliquam autem! Tempore, quo fugit soluta omnis magnam eaque distinctio eum rerum earum iusto? Officiis excepturi nisi qui repudiandae rerum optio aspernatur dignissimos nesciunt et eius exercitationem placeat aut numquam, soluta doloribus, minima mollitia culpa veritatis doloremque necessitatibus perferendis! Autem molestiae dicta ducimus, officiis quas assumenda esse excepturi quo omnis repellendus iure rerum odit, eos, consequuntur dolorem quasi cum incidunt. Perferendis sint ipsum quis architecto perspiciatis adipisci vitae, cupiditate nisi modi, nihil, fugit sunt a pariatur in eligendi! In eum maiores laborum sunt, ad porro, laboriosam doloremque est facere facilis reiciendis illo autem molestiae? Dolore soluta consectetur saepe temporibus odio magni repellat provident, voluptates cumque, quos sit doloremque et! Ipsa expedita blanditiis adipisci et in totam quae quaerat corrupti ut numquam eos accusantium laboriosam, voluptatem minus consequatur dolorem fugit ex aspernatur qui nam. Ex repellat, perspiciatis placeat nobis ratione quidem distinctio, consectetur amet suscipit saepe a nam asperiores blanditiis expedita!
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-1-1.png" alt="img"></div>
+					<p>Побудовано теорію еволюції вакансійної пори у частинках матриці сферичної форми. У випадку твердого стану методом молекулярної динаміки виявлено існування магічнихпор, які можуть існувати протягом тривалого часу. Частинка з магічною порою  утворює метастабільний стан. </p>
+				</div>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-1-2.png" alt="img"></div>
+					<p>Описано фазовий 	перехід в стан 	"суперсолід" у 	розрідженому	двовимірному газі 
+						електрон-діркових пар з	просторово розділеними 	компонентами. Знайдено, що такий 	перехід є переходом 	першого роду і фаза 	"суперсолід" є 	гексагональною.</p>
+				</div>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-1-3.png" alt="img"></div>
+					<p>На основі теорії функціонала густини 	розраховані рівноважні	концентрації точкових 	дефектів у кристалі 	Ti:α-Al2O3. Показано, що	концентрація кластерних 	дефектів, що формуються 	атомами титану в різних 	зарядових станах і 	вакансіями алюмінію, 	може бути порядку або	навіть перевищувати 	концентрацію простих 	дефектів. Отримано	універсальне спів-	відношення між 	концентраціями простих 	і комплексних дефектів. 	Визначено умови, що 	сприяють зменшенню 	концентрації пар	Ti3+-Ti4+.</p>
+				</div>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-1-4.png" alt="img"></div>
+					<p>Побудовано теорію 	залежності індикатриси 	відбиття від структурно-складної границі, що 	дозволяє реалізувати 	будь-яке співвідношення 	між часткою дифузійної і 	дзеркальної компонент	від кута падіння 	променів. 	Показано, що 	у таких модельних	границях вигляд 	дифузійної частини 	індикатриси, 	відрізняється від закону 	Кнудсена-Ламберта та 	якісно збігається з	експериментальними.</p>
+				</div>
 			</div>
 			<a href="#" class="link-department underline">Відділ теорії конденсованого стану речовини</a>
 		</div>
