--- a/home.html
+++ b/home.html
@@ -101,11 +101,9 @@
 							<span class="underline"></span>
 							<h2 class="card-title">Лазерна кераміка</h2>
 							<div class="card-img"><img src="images/card-img-2.png" alt="Лазерна кераміка"></div>
-							<p>Оптимізація структурно-фазового стану, морфології 
-								та оптичних властивостей оксидних нанопорошків 
-								та прозорої кераміки для оптики та лазерної техніки.</p>
+							<p>Оптимізація структурно-фазового стану, морфології 	та оптичних властивостей оксидних нанопорошків 	та прозорої кераміки для оптики та лазерної техніки.</p>
 						</div>
-						<a href="#" class="btn">Детальнiше</a>
+						<button type="button" uk-toggle="target: #lc" class="btn">Детальнiше</button>
 					</div>
 					<div class="card-technology">
 						<div class="card-content">
@@ -113,29 +111,21 @@
 							<h2 class="card-title">Теорія конденсованого стану речовени</h2>
 							<div class="card-img"><img src="images/card-img-3.png" alt="Теорія конденсованого стану речовени"></div>
 							<ul>
-								<li>Нелінійні та квантові властивості структурно-складних 
-									об’єктів;</li>
-								<li>Еволюція дефектних структур та вплив дефектів на властивості наноматеріалів; властивості нанорозмірних 
-									матеріалів;</li>
-								<li>Механізми фрагментації матеріалів, можливості управління 
-									процесами руйнування матеріалів.</li>
+								<li>Нелінійні та квантові властивості структурно-складних об’єктів;</li>
+								<li>Еволюція дефектних структур та вплив дефектів на властивості наноматеріалів; властивості нанорозмірних матеріалів;</li>
+								<li>Механізми фрагментації матеріалів, можливості управління процесами руйнування матеріалів.</li>
 							</ul>
 						</div>
-						<a href="#" class="btn">Детальнiше</a>
+						<button type="button" uk-toggle="target: #tcfs" class="btn">Детальнiше</button>
 					</div>
 					<div class="card-technology">
 						<div class="card-content">
 							<span class="underline"></span>
 							<h2 class="card-title">Оптичні та лазерні кристали</h2>
 							<div class="card-img"><img src="images/card-img-4.png" alt="Оптичні та лазерні кристали"></div>
-							<p>Розробка та вдосконалення технологій вирощування 
-								в захисних відновних середовищах великогабаритних 
-								монокристалів тугоплавких оксидів; 
-								технологія виготовлення оптичних елементів 
-								для застосування в лазерних та оптико-електронних 
-								системах.</p>
+							<p>Розробка та вдосконалення технологій вирощування	в захисних відновних середовищах великогабаритних монокристалів  тугоплавких оксидів;	технологія виготовлення оптичних елементів 	для застосування в лазерних та оптико-електронних 	системах.</p>
 						</div>
-						<a href="#" class="btn">Детальнiше</a>
+						<button type="button" uk-toggle="target: #olc" class="btn">Детальнiше</button>
 					</div>
 					
 				</section>
@@ -144,33 +134,159 @@
 		<span class="bg-img bg-wrapper bg-img-1"><img src="images/bg-img-1.svg" alt="img"></span>
 		
 	</div>
-	<div id="noc" class="uk-modal noc-modal technology-modal uk-flex-top" uk-modal>
+	<div id="tcfs" class="uk-modal noc-modal technology-modal uk-flex-top" uk-modal>
 		<div class="uk-modal-body uk-modal-dialog uk-margin-auto-vertical">
 			<button class="uk-modal-close-outside" type="button" uk-close></button>
 			<h2>ТЕОРІЯ КОНДЕНСОВАНОГО СТАНУ РЕЧОВИНИ</h2>
 			<div class="modal-body" uk-overflow-auto>
 				<div class="card-modal">
 					<div class="card-img"><img src="images/modal-img-1-1.png" alt="img"></div>
-					<p>Побудовано теорію еволюції вакансійної пори у частинках матриці сферичної форми. У випадку твердого стану методом молекулярної динаміки виявлено існування магічнихпор, які можуть існувати протягом тривалого часу. Частинка з магічною порою  утворює метастабільний стан. </p>
+					<div class="card-text">
+						<p>Побудовано теорію еволюції вакансійної пори у частинках матриці сферичної форми. У випадку твердого стану методом молекулярної динаміки виявлено існування магічнихпор, які можуть існувати протягом тривалого часу. Частинка з магічною порою  утворює метастабільний стан. </p>
+					</div>
 				</div>
 				<div class="card-modal">
 					<div class="card-img"><img src="images/modal-img-1-2.png" alt="img"></div>
-					<p>Описано фазовий 	перехід в стан 	"суперсолід" у 	розрідженому	двовимірному газі 
-						електрон-діркових пар з	просторово розділеними 	компонентами. Знайдено, що такий 	перехід є переходом 	першого роду і фаза 	"суперсолід" є 	гексагональною.</p>
+					<div class="card-text">
+						<p>Описано фазовий 	перехід в стан 	"суперсолід" у 	розрідженому	двовимірному газі 	електрон-діркових пар з	просторово розділеними 	компонентами. Знайдено, що такий 	перехід є переходом 	першого роду і фаза 	"суперсолід" є 	гексагональною.</p>
+					</div>
 				</div>
 				<div class="card-modal">
 					<div class="card-img"><img src="images/modal-img-1-3.png" alt="img"></div>
-					<p>На основі теорії функціонала густини 	розраховані рівноважні	концентрації точкових 	дефектів у кристалі 	Ti:α-Al2O3. Показано, що	концентрація кластерних 	дефектів, що формуються 	атомами титану в різних 	зарядових станах і 	вакансіями алюмінію, 	може бути порядку або	навіть перевищувати 	концентрацію простих 	дефектів. Отримано	універсальне спів-	відношення між 	концентраціями простих 	і комплексних дефектів. 	Визначено умови, що 	сприяють зменшенню 	концентрації пар	Ti3+-Ti4+.</p>
+					<div class="card-text">
+						<p>На основі теорії функціонала густини 	розраховані рівноважні	концентрації точкових 	дефектів у кристалі 	Ti:α-Al2O3. Показано, що	концентрація кластерних 	дефектів, що формуються 	атомами титану в різних 	зарядових станах і 	вакансіями алюмінію, 	може бути порядку або	навіть перевищувати 	концентрацію простих 	дефектів. Отримано	універсальне спів-	відношення між 	концентраціями простих 	і комплексних дефектів. 	Визначено умови, що 	сприяють зменшенню 	концентрації пар	Ti3+-Ti4+.</p>
+					</div>
 				</div>
 				<div class="card-modal">
 					<div class="card-img"><img src="images/modal-img-1-4.png" alt="img"></div>
-					<p>Побудовано теорію 	залежності індикатриси 	відбиття від структурно-складної границі, що 	дозволяє реалізувати 	будь-яке співвідношення 	між часткою дифузійної і 	дзеркальної компонент	від кута падіння 	променів. 	Показано, що 	у таких модельних	границях вигляд 	дифузійної частини 	індикатриси, 	відрізняється від закону 	Кнудсена-Ламберта та 	якісно збігається з	експериментальними.</p>
+					<div class="card-text">
+						<p>Побудовано теорію 	залежності індикатриси 	відбиття від структурно-складної границі, що 	дозволяє реалізувати 	будь-яке співвідношення 	між часткою дифузійної і 	дзеркальної компонент	від кута падіння 	променів. 	Показано, що 	у таких модельних	границях вигляд 	дифузійної частини 	індикатриси, 	відрізняється від закону 	Кнудсена-Ламберта та 	якісно збігається з	експериментальними.</p>
+					</div>
 				</div>
 			</div>
 			<a href="#" class="link-department underline">Відділ теорії конденсованого стану речовини</a>
 		</div>
 	</div>
-	
+	<div id="lc" class="uk-modal noc-modal technology-modal uk-flex-top" uk-modal>
+		<div class="uk-modal-body uk-modal-dialog uk-margin-auto-vertical">
+			<button class="uk-modal-close-outside" type="button" uk-close></button>
+			<h2>Лазерна керамiка</h2>
+			<div class="modal-body" uk-overflow-auto>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-2-1.png" alt="img"></div>
+					<div class="card-text">
+						<h5>Ітрій-алюмінієвий	гранат Y3Al5O12</h5>
+						<ul>
+							<li>Елементарна комірка –	160 атомів;</li>
+							<li>3 типи катіоних позицій;</li>
+							<li>Ширина забороненої зони 6еВ;</li>
+							<li>Висока ізоморфна	ємність для легування	РЗМ іонами.</li>
+						</ul>
+						<h6>Nd3+, Yb3+, Er3+...</h6>
+					</div>	
+				</div>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-2-2.png" alt="img"></div>
+					<div class="card-text">
+						<h5>Ітрій-алюмінієвий	гранат Y3Al5O12</h5>
+						<ul>
+							<li>Щільна упаковка	оптично-ізотропних	зерен;</li>
+							<li>Міжзеренні границі	товщиною ~1 нм,	прозорі для світла.</li>
+						</ul>
+					</div>
+				</div>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-2-3.png" alt="img"></div>
+					<div class="card-text">
+						<h5>Лазерна кераміка	Nd3+:YAG</h5>
+						<ul>
+							<li>Концентрація активатора до 4 ат.%;</li>
+							<li>Високий ККД генерації;</li>
+							<li>Ефективне активне	середовище для	компактних лазерів.</li>
+						</ul>
+					</div>
+				</div>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-2-4.png" alt="img"></div>
+					<div class="card-text">
+						<h5>Області	практичного	застосування</h5>
+						<ul>
+							<li>Мікрочіпові лазери;</li>
+							<li>Компактні лазери з 	діодною накачкою;</li>
+							<li>Лазери для спеціальних	застосувань.</li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<a href="#" class="link-department underline">Відділ кристалічних матеріалів складних сполук</a>
+		</div>
+	</div>
+	<div id="noc" class="uk-modal noc-modal technology-modal uk-flex-top" uk-modal>
+		<div class="uk-modal-body uk-modal-dialog uk-margin-auto-vertical">
+			<button class="uk-modal-close-outside" type="button" uk-close></button>
+			<h2>НЕЛІНІЙНО-ОПТИЧНІ КРИСТАЛИ</h2>
+			<div class="modal-body" uk-overflow-auto>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-4-1.jpg" alt="img"></div>
+					<div class="card-text">
+						<p>Показано збільшення 	ефективності генерації 	другої гармоніки (до 70%) 	і зменшення безвипромінювальних 	втрат (до 25%) в 	кристалах KDP: 	TiO2 у порівнянні з 	номінально чистими 	кристалами KDP.  </p>
+					</div>
+				</div>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-4-2.jpg" alt="img"></div>
+					<div class="card-text">
+						<p>Розроблено	сцинтиляційний 	детектор	c використанням 	активованих кристалів	типу KDP: (Tl+, Ce3+), для 	реєстрації швидких	(n, γ) - потоках.</p>
+					</div>
+				</div>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-4-3.jpg" alt="img"></div>
+					<div class="card-text">
+						<p>Визначено технологічні 	умови синтезу бінарних 		халькогенідів галію з 	високим відсотком 	виходу цільової 	речовини (>90%) та 		вирощування моно-	кристалічного селеніду 	галію як нелегованого, 	так і легованих хромом 	для нелінійно-оптичних 	перетворювачів. </p>
+					</div>
+				</div>
+				<div class="card-modal">
+					<div class="card-img"><img src="images/modal-img-4-4.jpg" alt="img"></div>
+					<div class="card-text">
+						<p>Запропоновано критерій 	когерентного	сполучення між 	кристалічною граткою 	KDP і органічним іоном 	(комплексом), який 	дозволяє прогнозувати 	входження іона 	в кристал.</p>
+					</div>
+				</div>
+			</div>
+			<a href="#" class="link-department underline">Відділ нелінійно-оптичних кристалів</a>
+		</div>
+	</div>
+	<div id="olc" class="uk-modal noc-modal technology-modal uk-flex-top" uk-modal>
+		<div class="uk-modal-body uk-modal-dialog uk-margin-auto-vertical">
+			<button class="uk-modal-close-outside" type="button" uk-close></button>
+			<h2>ОПТИЧНІ І ЛАЗЕРНІ КРИСТАЛИ</h2>
+			<div class="modal-body" uk-overflow-auto>
+				<div class="card-modal">
+					<div class="img-holder">
+						<div class="card-img"><img src="images/modal-img-3-1.jpg" alt="img"></div>
+						<div class="card-img"><img src="images/modal-img-3-2.jpg" alt="img"></div>
+						<div class="card-img"><img src="images/modal-img-3-3.jpg" alt="img"></div>
+						<div class="card-img"><img src="images/modal-img-3-4.jpg" alt="img"></div>
+					</div>
+					<div class="card-text">	
+						<p>Вирощування надвеликих кристалів лейкосапфіру для оптико-електронних систем, лазерних кристалів Ti: сапфіру і кристалів рідкісноземельних гранатів в захисних відновних середовищах.</p>
+					</div>
+				</div>
+				<div class="card-modal">
+					<div class="img-holder">
+						<div class="card-img"><img src="images/modal-img-3-5.jpg" alt="img"></div>
+						<div class="card-img"><img src="images/modal-img-3-6.jpg" alt="img"></div>
+						<div class="card-img"><img src="images/modal-img-3-7.jpg" alt="img"></div>
+					</div>
+					<div class="card-text">	
+						<ol>
+							<li>1. Перспективні кристали багатокомпонентних	оксидних сполук для лазерів ближнього ІЧ-	діапазону;</li>
+							<li>2. Люмінесцентні кристалічні композити для 	потужних лазерних, світлодіодних джерел світла.</li>
+						</ol>
+					</div>
+				</div>
+			</div>
+			<a href="#" class="link-department underline">Відділ оптичних і лазерних кристалів</a>
+		</div>
+	</div>
 		
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/js/uikit.min.js"></script>
 	<script src="https://cdn.jsdelivr.net/npm/uikit@3.7.0/dist/js/uikit-icons.min.js"></script>
