--- a/home.html
+++ b/home.html
@@ -71,7 +71,7 @@
 					<span class="bg-img bg-img-3"><img src="images/bg-img-1.svg" alt="img"></span>
 				</section>
 				<section class="section section-about">
-					<span class="underline"></span>
+					<span class="underline-left"></span>
 					<h2 class="section-title">Інститут монокристалів НАН України має більш ніж піввіковий досвід:</h2>
 					<ul>
 						<li>в <strong>матеріалознавстві кристалічних матеріалів</strong> для оптики, лазерної техніки, електроніки та інших застосувань;</li>
@@ -85,7 +85,7 @@
 				<section class="section section-technology">
 					<div class="card-technology">
 						<div class="card-content">
-							<span class="underline"></span>
+							<span class="underline-left"></span>
 							<h2 class="card-title">Нелінійно-оптичні кристали</h2>
 							<div class="card-img"><img src="images/card-img-1.png" alt="Нелінійно-оптичні кристали"></div>
 							<p>Розробка та дослідження перспективних нелінійно-
@@ -98,7 +98,7 @@
 					</div>
 					<div class="card-technology">
 						<div class="card-content">
-							<span class="underline"></span>
+							<span class="underline-left"></span>
 							<h2 class="card-title">Лазерна кераміка</h2>
 							<div class="card-img"><img src="images/card-img-2.png" alt="Лазерна кераміка"></div>
 							<p>Оптимізація структурно-фазового стану, морфології 	та оптичних властивостей оксидних нанопорошків 	та прозорої кераміки для оптики та лазерної техніки.</p>
@@ -107,7 +107,7 @@
 					</div>
 					<div class="card-technology">
 						<div class="card-content">
-							<span class="underline"></span>
+							<span class="underline-left"></span>
 							<h2 class="card-title">Теорія конденсованого стану речовени</h2>
 							<div class="card-img"><img src="images/card-img-3.png" alt="Теорія конденсованого стану речовени"></div>
 							<ul>
@@ -120,7 +120,7 @@
 					</div>
 					<div class="card-technology">
 						<div class="card-content">
-							<span class="underline"></span>
+							<span class="underline-left"></span>
 							<h2 class="card-title">Оптичні та лазерні кристали</h2>
 							<div class="card-img"><img src="images/card-img-4.png" alt="Оптичні та лазерні кристали"></div>
 							<p>Розробка та вдосконалення технологій вирощування	в захисних відновних середовищах великогабаритних монокристалів  тугоплавких оксидів;	технологія виготовлення оптичних елементів 	для застосування в лазерних та оптико-електронних 	системах.</p>
@@ -129,8 +129,72 @@
 					</div>
 					
 				</section>
+				<section class="section section-gallery uk-position-relative">
+					<div uk-slider="autoplay: true">
+						<a href="#" uk-slider-item="previous" class="uk-position-center-left-out gallery-arrow"><span class="arrow"></span></a>
+    				<a href="#" uk-slider-item="next" class="uk-position-center-right-out gallery-arrow"><span class="arrow"></span></a>
+						<ul class="uk-slider-items uk-child-width-1">
+							<li uk-slider-item="0">
+								<img src="images/slide-01.jpg" alt="img">
+							</li>
+							<li uk-slider-item="1">
+								<img src="images/slide-02.jpg" alt="img">
+							</li>
+							<li uk-slider-item="2">
+								<img src="images/slide-03.jpg" alt="img">
+							</li>
+							<li uk-slider-item="3">
+								<img src="images/slide-04.jpg" alt="img">
+							</li>
+							<li uk-slider-item="4">
+								<img src="images/slide-05.jpg" alt="img">
+							</li>
+							<li uk-slider-item="5">
+								<img src="images/slide-06.jpg" alt="img">
+							</li>
+							<li uk-slider-item="6">
+								<img src="images/slide-07.jpg" alt="img">
+							</li>
+							<li uk-slider-item="7">
+								<img src="images/slide-08.jpg" alt="img">
+							</li>
+							<li uk-slider-item="8">
+								<img src="images/slide-09.jpg" alt="img">
+							</li>
+							<li uk-slider-item="9">
+								<img src="images/slide-10.jpg" alt="img">
+							</li>
+						</ul>
+						<ul class="uk-slider-nav uk-dotnav"></ul>
+					</div>
+				</section>
 			</div>
 		</main>
+		<footer id="footer" class="footer">
+			<div class="container">
+				<div class="footer-top">
+					<div class="logo-holder">
+						<img src="images/logo.svg" alt="Інститут монокристалів НАН України" class="logo-img">
+					</div>
+					<ul class="contact-holder">
+						<li class="underline-left"></li>
+						<li>м.Харків, пр.Науки, 60</li>
+						<li class="contact-item">
+							<a href="tel:+380573410449" class="underline">+38 (057) 341 04 49,</a> 
+							<a href="tel:+380573410166" class="underline">+38 (057) 341 01 66,</a> 
+							<a href="tel:+380573409343" class="underline">+38 (057) 340 93 43</a></li>
+						<li><a href="mailto:imc@isc.kharkov.ua" class="underline">imc@isc.kharkov.ua</a></li>
+					</ul>
+					<div class="social-holder">
+						<a href="#" class="social-link"><img src="images/fb.svg" alt="fb" class="social-icon"></a>
+						<a href="#" class="social-link"><img src="images/youtube.svg" alt="youtube" class="social-icon youtube-icon"></a>
+					</div>
+				</div>
+				<div class="footer-bottom">
+					<p>	&#169 2021 <a href="home.html">Інститут монокристалів НАН України</a>. All Rights Reserved</p>
+				</div>
+			</div>
+		</footer>
 		<span class="bg-img bg-wrapper bg-img-1"><img src="images/bg-img-1.svg" alt="img"></span>
 		
 	</div>
