--- a/home.html
+++ b/home.html
@@ -18,26 +18,28 @@
 					<div class="logo-holder">
 						<img src="images/logo.svg" alt="Інститут монокристалів НАН України" class="logo-img">
 					</div>
-					<div class="languages-holder">
-						<a href="#" class="ua-lang active">
-							<img src="images/ua.svg" alt="ua" class="lang-img">
-							<span class="lang-text underline">Укр</span>
-						</a>
-						<a href="#" class="eng-lang">
-							<img src="images/eng.svg" alt="eng" class="lang-img">
-							<span class="lang-text underline">Eng</span>
-						</a>
-					</div>
-					<ul class="contact-holder">
-						<li>м.Харків, пр.Науки, 60</li>
-						<li><a href="tel:+380573410449" class="underline">+38 (057) 341 04 49</a></li>
-						<li><a href="tel:+380573410166" class="underline">+38 (057) 341 01 66</a></li>
-						<li><a href="tel:+380573409343" class="underline">+38 (057) 340 93 43</a></li>
-						<li><a href="mailto:imc@isc.kharkov.ua" class="underline">imc@isc.kharkov.ua</a></li>
-					</ul>
-					<div class="social-holder">
-						<a href="#" class="social-link"><img src="images/fb.svg" alt="fb" class="social-icon"></a>
-						<a href="#" class="social-link"><img src="images/youtube.svg" alt="youtube" class="social-icon youtube-icon"></a>
+					<div class="header-contact">
+						<div class="languages-holder">
+							<a href="#" class="ua-lang active">
+								<img src="images/ua.svg" alt="ua" class="lang-img">
+								<span class="lang-text underline">Укр</span>
+							</a>
+							<a href="#" class="eng-lang">
+								<img src="images/eng.svg" alt="eng" class="lang-img">
+								<span class="lang-text underline">Eng</span>
+							</a>
+						</div>
+						<ul class="contact-holder">
+							<li>м.Харків, пр.Науки, 60</li>
+							<li><a href="tel:+380573410449" class="underline">+38 (057) 341 04 49</a></li>
+							<li><a href="tel:+380573410166" class="underline">+38 (057) 341 01 66</a></li>
+							<li><a href="tel:+380573409343" class="underline">+38 (057) 340 93 43</a></li>
+							<li><a href="mailto:imc@isc.kharkov.ua" class="underline">imc@isc.kharkov.ua</a></li>
+						</ul>
+						<div class="social-holder">
+							<a href="#" class="social-link"><img src="images/fb.svg" alt="fb" class="social-icon"></a>
+							<a href="#" class="social-link"><img src="images/youtube.svg" alt="youtube" class="social-icon youtube-icon"></a>
+						</div>
 					</div>
 				</div>
 				<nav class="navbar">
