--- a/home.html
+++ b/home.html
@@ -15,9 +15,9 @@
 		<header id="header">
 			<div class="container">
 				<div class="header-top">
-					<div class="logo-holder">
+					<a href="home.html" class="logo-holder">
 						<img src="images/logo.svg" alt="Інститут монокристалів НАН України" class="logo-img">
-					</div>
+					</a>
 					<div class="header-contact">
 						<div class="languages-holder">
 							<a href="#" class="ua-lang active">
@@ -45,7 +45,7 @@
 				<nav class="navbar underline" uk-navbar="mode: click">
 					<a href="#" class="dropdown"><span class="dropdown-icon"></span></a>
 					<ul uk-dropdown class="navigation uk-navbar-nav">
-						<li class="navigation-item"><a href="#" class="navigation-link">ГОЛОВНА</a></li>
+						<li class="navigation-item"><a href="home.html" class="navigation-link">ГОЛОВНА</a></li>
 						<li class="navigation-item"><a href="#" class="navigation-link">ПОДІЇ ТА НОВИНИ</a></li>
 						<li class="navigation-item submenu-link uk-parent">
 							<a href="#" class="navigation-link">СТРУКТУРА</a>
@@ -76,7 +76,7 @@
 						</li>
 						<li class="navigation-item"><a href="#" class="navigation-link">НАУКА</a></li>
 						<li class="navigation-item"><a href="#" class="navigation-link">ДІЯЛЬНІСТЬ</a></li>
-						<li class="navigation-item"><a href="#" class="navigation-link">АСПІРАНТУРА</a></li>
+						<li class="navigation-item"><a href="graduate-school.html" class="navigation-link">АСПІРАНТУРА</a></li>
 						<li class="navigation-item"><a href="#" class="navigation-link">ПУБЛІКАЦІЇ</a></li>
 						<li class="navigation-item"><a href="#" class="navigation-link">КОНТАКТИ</a></li>
 					</ul>
